Revert "fix: use fixed widths for time and score alignment"
This reverts commit 073f962aef31d6f9790c231b0f3bc5f11f5dc422.

--- a/css/main.css
+++ b/css/main.css
@@ -7319,7 +7319,7 @@ select:focus-visible,
     text-align: right;
     flex-shrink: 0;
     white-space: nowrap;
-    width: 70px;
+    min-width: 70px;
 }
 
 .progress-status .completion-score {
@@ -7331,7 +7331,8 @@ select:focus-visible,
     text-align: right;
     flex-shrink: 0;
     white-space: nowrap;
-    width: 65px;
+    min-width: 60px;
+    padding-right: 4px;
 }
 
 
